[gd_scene load_steps=14 format=2]

[ext_resource path="res://App/Interface/IconButton/IconButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://App/Modules/Controls/Controls.gd" type="Script" id=2]
[ext_resource path="res://App/Interface/Controls/NextTrack.tscn" type="PackedScene" id=3]
[ext_resource path="res://App/Interface/Controls/PlayPause.tscn" type="PackedScene" id=5]
[ext_resource path="res://App/Interface/Controls/SeekBack.tscn" type="PackedScene" id=6]
[ext_resource path="res://App/Icons/volume_3.svg" type="Texture" id=7]
[ext_resource path="res://App/Icons/volume_0.svg" type="Texture" id=8]
[ext_resource path="res://App/Icons/volume_2.svg" type="Texture" id=9]
[ext_resource path="res://App/Icons/volume_1.svg" type="Texture" id=10]
[ext_resource path="res://App/Interface/Controls/SeekForward.tscn" type="PackedScene" id=12]
[ext_resource path="res://App/Interface/Controls/PreviousTrack.tscn" type="PackedScene" id=13]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0.121569, 0.121569, 0.121569, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0.45098, 0.858824, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_top = 8.0

[node name="Controls" type="HBoxContainer"]
anchor_right = 1.0
rect_min_size = Vector2( 0, 48 )
custom_constants/separation = 4
alignment = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
volume_stages = [ ExtResource( 8 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 7 ) ]

[node name="Volume" parent="." instance=ExtResource( 1 )]
margin_left = 454.0
margin_right = 502.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 0 )
texture = ExtResource( 7 )
icon_size = 0.75
hint = "CONTROL_VOLUME"

[node name="Popup" type="Popup" parent="Volume"]
margin_left = -100.0
margin_right = -68.0
margin_bottom = 200.0
rect_min_size = Vector2( 32, 200 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="Volume/Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -32.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSlider" type="VSlider" parent="Volume/Popup/PanelContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 24.0
margin_bottom = 192.0
rect_min_size = Vector2( 0, 160 )
size_flags_horizontal = 3
custom_styles/grabber_area_highlight = SubResource( 2 )
max_value = 1.0
step = 0.0
value = 0.209
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PreviousTrack" parent="." instance=ExtResource( 13 )]
margin_left = 506.0
margin_right = 554.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 0 )
icon_size = 0.6

[node name="SeekBack" parent="." instance=ExtResource( 6 )]
margin_left = 558.0
margin_right = 606.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 0 )
icon_size = 0.6

[node name="PlayPause" parent="." instance=ExtResource( 5 )]
margin_left = 610.0
margin_right = 658.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 0 )

[node name="SeekForward" parent="." instance=ExtResource( 12 )]
margin_left = 662.0
margin_right = 710.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 0 )
icon_size = 0.6

[node name="NextTrack" parent="." instance=ExtResource( 3 )]
margin_left = 714.0
margin_right = 762.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 0 )
icon_size = 0.6

[node name="SpeedOption" type="Button" parent="."]
margin_left = 766.0
margin_right = 826.0
margin_bottom = 48.0
rect_min_size = Vector2( 60, 0 )
focus_mode = 0
text = "1x"

[node name="PopupMenu" type="PopupMenu" parent="SpeedOption"]
margin_left = 100.0
margin_right = 155.0
margin_bottom = 140.0
items = [ "0.25x", null, 2, false, false, 0, 0, null, "", false, "0.5x", null, 2, false, false, 1, 0, null, "", false, "0.75x", null, 2, false, false, 2, 0, null, "", false, "1x", null, 2, true, false, 3, 0, null, "", false, "1.25x", null, 2, false, false, 4, 0, null, "", false, "1.5x", null, 2, false, false, 5, 0, null, "", false, "1.75x", null, 2, false, false, 6, 0, null, "", false, "2x", null, 2, false, false, 7, 0, null, "", false ]
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Volume" to="." method="_on_Volume_pressed"]
[connection signal="value_changed" from="Volume/Popup/PanelContainer/VSlider" to="." method="_on_VSlider_value_changed"]
[connection signal="pressed" from="SpeedOption" to="." method="_on_SpeedOption_pressed"]
[connection signal="index_pressed" from="SpeedOption/PopupMenu" to="." method="_on_PopupMenu_index_pressed"]
